--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-  <script>
+  <script type="module">
     import Phaser from 'phaser'
 
     import Game from './Game'
