--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script type="module">
     import Phaser from 'phaser'
 
-    import Game from './Game'
+    import Game from './client./Game'
 
     const config = {
       type: Phaser.AUTO,
