--- a/index.html
+++ b/index.html
@@ -1,38 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
-  <style>
-    html,
-    body {
-      margin: 0;
-      padding: 0;
-    }
-  </style>
-</head>
-<body>
-  <script type="module">
-    import Phaser from 'phaser'
-
-    import Game from './client./Game'
-
-    const config = {
-      type: Phaser.AUTO,
-        parent: "phaser-example",
-        width: 1280,
-        height: 720,
-        scale: {
-            // Fit to window
-            mode: Phaser.Scale.FIT,
-            // Center vertically and horizontally
-            autoCenter: Phaser.Scale.CENTER_BOTH
-        },
-        scene: [Game]
-    }
-
-    export default new Phaser.Game(config)
-
-  </script>
-</body>
+<html>
+  <head>
+    <title>Air Poker</title>
+    <script src="client/src/Game.js"></script>
+  </head>
+  <body>
+    <div id="game"></div>
+  </body>
 </html>
