--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Air Poker</title>
-    <script src="client/src/Game.js"></script>
+    <script type="module" src="client/src/Game.js"></script>
   </head>
   <body>
     <div id="game"></div>
