--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <title>Air Poker</title>
+    <script src="src/Game.js"></script>
+    <script type="module" src="src/Game.js"></script>
   </head>
   <body>
+    <div id="game"></div>
   </body>
 </html>
