--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <title>Air Poker</title>
-    <script src="src/Game.js"></script>
-    <script type="module" src="src/Game.js"></script>
+    <script src="dist/bundle.min.js"></script>
+    <script type="module" src="dist/bundle.min.js"></script>
   </head>
   <body>
     <div id="game"></div>
