--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
+    <script defer="defer" src="dist/main.js"></script>
   </head>
   <body>
   </body>
