--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script defer="defer" src="dist/main.js"></script>
+    <script defer="defer" src="src/index.js"></script>
   </head>
   <body>
   </body>
